# spotifymanager

./: .env.example  .gitignore  CLAUDE.md  config.yaml  pyproject.toml  spotify-ai-implementation.md
scripts/: backfill.py  recluster.py  train_taste_model.py
src/data/: db.py  ingest.py  lastfm_client.py  models.py  spotify_client.py
src/features/: embeddings.py  listening_stats.py  mood.py
src/interface/: cli.py  discord_bot.py
src/llm/: client.py  cluster_naming.py  discovery_context.py
src/models/: clustering.py  discovery.py  scoring.py  taste.py
src/playlists/: cycling.py  dynamic.py  snapshot.py
tests/: conftest.py  test_clustering.py  test_discord.py  test_discovery.py  test_embeddings.py  test_fuzzy_matching.py  test_llm.py  test_models.py  test_mood.py  test_playlist.py  test_scoring.py  test_snapshot.py  test_taste.py
